--- a/index.html
+++ b/index.html
@@ -151,6 +151,9 @@
                     <p>+</p>
                 </div>
             </div>
+            <div class="chat">
+                <img src="./images/messages-2.png" alt="">
+            </div>
         </div>
     </section>
     <!-- footer -->
@@ -172,7 +175,7 @@
                 <input type="text" name="email" id="email" placeholder="Your email address" class="inputs">
                 <button class="orange sign">Sign me up</button>
             </div>
-        </div>
+        </div><hr size="2" width="100%" color="white" style="margin: 2rem 0;">
         <div class="footer-container">
             <div class="footer-contents">
                 <p>2022 Friendal, Inc. All Rights Reserved</p>
