--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <a href="#" class="logo"><img src="./images/image 3.png" class="header-image" alt=""></a>
             <!-- Navbar -->
             <ul class="navbar">
-                <li><a href="signup.html" class="nav-link black">Register</a></li>
-                <li><a href="login.html" class="nav-link orange">Login</a></li>
+                <li class="link"><a href="signup.html" class="nav-link black">Register</a></li>
+                <li class="link"><a href="login.html" class="nav-link orange">Login</a></li>
             </ul>
         </div>
     </header>
@@ -29,10 +29,10 @@
         <div class="body-content">
             <div class="body-text">
                 <h2 class="body-h2">Business <span>grows</span> when friends and family help out <span>.</span></h2>
-                <p class="body-p">Easily invite friends to help support your business with Frendal</p>
+                <p class="body-p">Get your friends to support you when you launch your business</p>
                 <div class="buttons">
-                    <button class="hug orange">Launch project</button>
-                    <button class="hug learn-more">Learn more</button>
+                    <button class="hugs orange">Get started</button>
+                    <button class="hug learn-more">Explore projects</button>
                 </div>
             </div>
             <div class="body-img">
@@ -63,24 +63,34 @@
         <div class="what-content">
             <div class="what-text">
                 <h2>What we do</h2>
-                <p>Our goal is to help entrepreneursbring innovative ideas to life with the help of a community of friends and necessary tools</p>
+                <p>Our goal is to help bring your innovative ideas or dream projects to life. Frendal allows friends to support your business before or after launch</p>
             </div>
             <div class="what-details">
                 <div class="message-body">
-                    <div class="details"><img src="./images/Vector.png" alt=""></div>
-                    <p class="message">Get a business idea</p>
+                    <div class="details"><img class="img1" src="./images/Vector.png" alt=""></div>
+                    <hr class="hr1">
+                    <h5 class="message">Nourish Ideas</h5>
+                    <p>The ideal place to find innovative and <br> exciting new launches to nourish your idea.</p>
                 </div>
                 <div class="message-body">
-                    <div class="details"><img src="./images/Vector (1).png" alt=""></div>
-                    <p class="message">Get support from friends</p>
+                    <div class="details"><img class="img2" src="./images/icon-park-outline_funds.png" alt=""></div>
+                    <hr class="hr2">
+                    <hr class="hr1">
+                    <h5 class="message">Fund Dream Projects</h5>
+                    <p>With a few clicks, friends can invest in your business idea before it launches</p>
                 </div>
                 <div class="message-body">
-                    <div class="details"><img src="./images/Vector (2).png" alt=""></div>
-                    <p class="message">Manage support from friends</p>
+                    <div class="details"><img class="img3" src="./images/Vector (2).png" alt=""></div>
+                    <hr class="hr1">
+                    <hr class="hr2">
+                    <h5 class="message">Evaluate Campaign</h5>
+                    <p>See how it looks. Manage campaigns and pledges from friends</p>
                 </div>
                 <div class="message-body">
-                    <div class="details"><img src="./images/Vector (3).png" alt=""></div>
-                    <p class="message">Launch!</p>
+                    <div class="details"><img class="img4" src="./images/Vector (3).png" alt=""></div>
+                    <hr class="hr2">
+                    <h5 class="message">Launch!</h5>
+                    <p>Get all necessary <br> tools needed to kickstart your projects</p>
                 </div>
             </div>
         </div>
@@ -94,25 +104,25 @@
             <div class="how-details">
                 <div class="how-body">
                     <div class="how-number"><p>1</p></div>
-                    <div class="hows"><p>Create an account</p></div>
+                    <div class="hows"><p>Create Frendal account</p></div>
                 </div>
                 <div class="how-body">
                     <div class="how-number"><p>2</p></div>
-                    <div class="hows"><p>Generate lead page</p></div>
+                    <div class="hows"><p>Generate campaign draft</p></div>
                 </div>
                 <div class="how-body">
                     <div class="how-number"><p>3</p></div>
-                    <div class="hows"><p>Share your URL to friends</p></div>
+                    <div class="hows"><p>Launch Campaign</p></div>
                 </div>
             </div>
             <div class="how-detail">
                 <div class="how-body">
                     <div class="how-number"><p>4</p></div>
-                    <div class="hows"><p>Monitor feedback from friends</p></div>
+                    <div class="hows"><p>Share URL to your friends</p></div>
                 </div>
                 <div class="how-body">
                     <div class="how-number"><p>5</p></div>
-                    <div class="hows"><p>Launch!</p></div>
+                    <div class="hows"><p>Monitor Feedback/ Follow-up</p></div>
                 </div>
             </div>
         </div>
@@ -122,7 +132,7 @@
         <div class="email-content">
             <h5>Bring that innovative idea to life with support from friends</h5>
             <input type="text" name="email" id="email" placeholder="Enter your email" class="input put">
-            <button class="orange puts">Launch project</button>
+            <button class="orange puts">Get started</button>
         </div>
     </section>
     <!-- FAQs -->
@@ -164,10 +174,10 @@
                 <p class="para">We are a platform that helps you receive support from friends at the launch of your business</p>
                 <ul class="social-items">
                     <li><img class="socials" src="./images/facebook.png" alt=""></li>
-                    <li><img class="socials" src="./images/twitter.png" alt=""></li>
-                    <li><img class="socials" src="./images/youtube.png" alt=""></li>
-                    <li><img class="socials" src="./images/instagram.png" alt=""></li>
-                    <li><img class="socials" src="./images/linkedin.png" alt=""></li>
+                    <li><img class="socials1" src="./images/twitter.png" alt=""></li>
+                    <li><img class="socials2" src="./images/youtube.png" alt=""></li>
+                    <li><img class="socials3" src="./images/instagram.png" alt=""></li>
+                    <li><img class="socials4" src="./images/linkedin.png" alt=""></li>
                 </ul>
             </div>
             <div class="footer-content">
@@ -175,10 +185,10 @@
                 <input type="text" name="email" id="email" placeholder="Your email address" class="inputs">
                 <button class="orange sign">Sign me up</button>
             </div>
-        </div><hr size="2" width="100%" color="white" style="margin: 2rem 0;">
+        </div><hr size="2" width="100%" color="#C1C1C1" style="margin: 2rem 0;">
         <div class="footer-container">
             <div class="footer-contents">
-                <p>2022 Friendal, Inc. All Rights Reserved</p>
+                <p>&copy; 2022 Frendal, Inc. All Rights Reserved</p>
             </div>
             <div class="footer-contents">
                 <a href="">Terms of Use</a>
